--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "module",
     "scripts": {
         "start": "node index.js",
-        "dev": "node --watch  --env-file=.env index.js"
+        "dev": "node --watch  --env-file=.env server.js"
     },
     "keywords": [
         "todos",
